@@ -30,12 +30,34 @@ from beancount.query import query_compile
 
 # Non-agreggating functions. These functionals maintain no state.
 
-class Abs(query_compile.EvalFunction):
+class AbsDecimal(query_compile.EvalFunction):
     "Compute the length of the argument. This works on sequences."
     __intypes__ = [Decimal]
 
     def __init__(self, operands):
         super().__init__(operands, Decimal)
+
+    def __call__(self, context):
+        args = self.eval_args(context)
+        return abs(args[0])
+
+class AbsPosition(query_compile.EvalFunction):
+    "Compute the length of the argument. This works on sequences."
+    __intypes__ = [position.Position]
+
+    def __init__(self, operands):
+        super().__init__(operands, position.Position)
+
+    def __call__(self, context):
+        args = self.eval_args(context)
+        return abs(args[0])
+
+class AbsInventory(query_compile.EvalFunction):
+    "Compute the length of the argument. This works on sequences."
+    __intypes__ = [inventory.Inventory]
+
+    def __init__(self, operands):
+        super().__init__(operands, inventory.Inventory)
 
     def __call__(self, context):
         args = self.eval_args(context)
@@ -615,7 +637,9 @@ class FilterCurrencyInventory(query_compile.EvalFunction):
 # FIXME: Why do I need to specify the arguments here? They are already derived
 # from the functions. Just fetch them from instead. Make the compiler better.
 SIMPLE_FUNCTIONS = {
-    'abs'                                                : Abs,
+    ('abs', Decimal)                                     : AbsDecimal,
+    ('abs', position.Position)                           : AbsPosition,
+    ('abs', inventory.Inventory)                         : AbsInventory,
     'length'                                             : Length,
     'str'                                                : Str,
     'maxwidth'                                           : MaxWidth,
