@@ -4,6 +4,12 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2017-09-06
+
+  - Added ABS() implementation to SQL shell for Position and Inventory types.
+    See https://groups.google.com/d/msg/beancount/0i4w98LmS6E/JJGOKSB8CQAJ
+
+
 2017-07-23
 
   - Fixed #179: Scientific notation should never appear in rendered output.
